Update project ID format type to UUID
Signed-off-by: Moti Asayag <masayag@redhat.com>